--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <title>Learning bootstrap v5 with sass</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="assets/vendors/css/glightbox.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- START THE NAVBAR SECTION -->
-    <nav class="navbar navbar-expand-lg navbar-dark menu">
+    <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="images/logo.png" alt="logo image" />
@@ -59,6 +66,76 @@
         </div>
       </div>
     </nav>
+
+    <!-- START THE INTRO SECTION -->
+    <section id="id" class="intro-section">
+      <div class="container">
+        <div class="row align-items-center text-white">
+          <!-- START THE CONTENT FOR THE INTRO -->
+          <div class="col-md-6 intros text-start">
+            <h1 class="display-2">
+              <span class="display-2--intro">Hey!, I'm Patrick</span>
+              <span class="display-2--description lh-base">
+                this is a multi-purpose responisve layout created with bootstrap
+                v5.
+              </span>
+            </h1>
+            <button type="button" class="rounded-pill btn-rounded">
+              Get in Touch
+              <span>
+                <i class="fas fa-arrow-right"></i>
+              </span>
+            </button>
+          </div>
+          <!-- START THE CONTENT FOR THE VIDEO -->
+          <div class="col-md-6 intros text-end">
+            <div class="video-box">
+              <img
+                src="images/arts/intro-section-illustration.png"
+                alt="video illustration"
+                class="img-fluid"
+              />
+              <a
+                href="#"
+                class="
+                  glightbox
+                  position-absolute
+                  top-50
+                  start-50
+                  translate-middle
+                "
+              >
+                <span>
+                  <i class="fas fa-play-circle"></i>
+                </span>
+                <span class="border-animation border-animation--border-1">
+                </span>
+                <span class="border-animation border-animation--border-2">
+                </span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#fff"
+          fill-opacity="1"
+          d="M0,128L40,154.7C80,181,160,235,240,224C320,213,400,139,480,138.7C560,139,640,213,720,218.7C800,224,880,160,960,133.3C1040,107,1120,117,1200,133.3C1280,149,1360,171,1400,181.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+
+    <script src="assets/vendors/js/glightbox.min.js"></script>
+    <script type="text/javascript">
+      const lightbox = GLightbox({
+        href: 'https://youtu.be/iJKCj8uAHz8',
+        type: 'video',
+        source: 'youtube', //vimeo, youtube or local
+        width: 900,
+        autoplayVideos: 'true',
+      });
+    </script>
     <script src="assets/js/bootstrap.bundle.js"></script>
   </body>
 </html>
