--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
             <div class="services__content">
               <div class="icon d-block fas fa-paper-plane"></div>
-              <h3 class="dispaly-3--title mt-1">Marketing</h3>
+              <h3 class="display-3--title mt-1">Marketing</h3>
               <p class="lh-lg">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Quas laudantium, reprehenderit libero animi, ipsam ratione cupiditate a autem iure non, 
@@ -267,7 +267,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
             <div class="services__content">
               <div class="icon d-block fas fa-code"></div>
-              <h3 class="dispaly-3--title mt-1">Web Development</h3>
+              <h3 class="display-3--title mt-1">Web Development</h3>
               <p class="lh-lg">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quas laudantium, reprehenderit libero animi, ipsam ratione cupiditate a autem iure non,
@@ -287,7 +287,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
             <div class="services__content">
               <div class="icon d-block fas fa-cloud-upload-alt"></div>
-              <h3 class="dispaly-3--title mt-1">Cloud Hosting</h3>
+              <h3 class="display-3--title mt-1">Cloud Hosting</h3>
               <p class="lh-lg">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quas laudantium, reprehenderit libero animi, ipsam ratione cupiditate a autem iure non,
