--- a/index.html
+++ b/index.html
@@ -205,9 +205,7 @@
     <section id="services" class="services">
       <div class="container">
         <div class="row text-center">
-          <h1 class="display-3 fw-bold">
-            Our Services
-          </h1>
+          <h1 class="display-3 fw-bold">Our Services</h1>
           <div class="heading-line mb-1"></div>
         </div>
 
@@ -216,15 +214,17 @@
           <div class="col-md-6 border-right">
             <div class="bg-white p-3">
               <h2 class="fw-bold text-capitalize text-center">
-                Our Services Range From Initial Design To Deployment Anywhere Anytime
+                Our Services Range From Initial Design To Deployment Anywhere
+                Anytime
               </h2>
             </div>
           </div>
           <div class="col-md-6">
             <div class="bg-white p-4 text-start">
               <p class="fw-light">
-                Lorem ipsum dolor sit amet consectetur architecto magni, dicta maxime laborum temporibus dolorem esse doloremque
-                illo quas nisi enim molestias. Tempore ducimus molestiae in dolore enim.
+                Lorem ipsum dolor sit amet consectetur architecto magni, dicta
+                maxime laborum temporibus dolorem esse doloremque illo quas nisi
+                enim molestias. Tempore ducimus molestiae in dolore enim.
               </p>
             </div>
           </div>
@@ -239,11 +239,15 @@
               <div class="icon d-block fas fa-paper-plane"></div>
               <h3 class="display-3--title mt-1">Marketing</h3>
               <p class="lh-lg">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Quas laudantium, reprehenderit libero animi, ipsam ratione cupiditate a autem iure non, 
-                excepturi laboriosam vel id dolorum eum quod facilis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                laudantium, reprehenderit libero animi, ipsam ratione cupiditate
+                a autem iure non, excepturi laboriosam vel id dolorum eum quod
+                facilis.
               </p>
-              <button type="button" class="rounded-pill btn-rounded border-primary">
+              <button
+                type="button"
+                class="rounded-pill btn-rounded border-primary"
+              >
                 Learn more
                 <span>
                   <i class="fas fa-arrow-right"></i>
@@ -251,17 +255,34 @@
               </button>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
+          <div
+            class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end"
+          >
             <div class="services__pic">
-              <img src="images/services/service-1.png" alt="marketing illustration" class="img-fluid">
+              <img
+                src="images/services/service-1.png"
+                alt="marketing illustration"
+                class="img-fluid"
+              />
             </div>
           </div>
         </div>
         <!-- START THE WEB DEVELOPMENT CONTENT -->
         <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
+          <div
+            class="
+              col-lg-6 col-md-6 col-sm-12 col-xs-12
+              services
+              mt-4
+              text-start
+            "
+          >
             <div class="services__pic">
-              <img src="images/services/service-2.png" alt="web development illustration" class="img-fluid">
+              <img
+                src="images/services/service-2.png"
+                alt="web development illustration"
+                class="img-fluid"
+              />
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
@@ -269,11 +290,15 @@
               <div class="icon d-block fas fa-code"></div>
               <h3 class="display-3--title mt-1">Web Development</h3>
               <p class="lh-lg">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quas laudantium, reprehenderit libero animi, ipsam ratione cupiditate a autem iure non,
-                excepturi laboriosam vel id dolorum eum quod facilis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                laudantium, reprehenderit libero animi, ipsam ratione cupiditate
+                a autem iure non, excepturi laboriosam vel id dolorum eum quod
+                facilis.
               </p>
-              <button type="button" class="rounded-pill btn-rounded border-primary">
+              <button
+                type="button"
+                class="rounded-pill btn-rounded border-primary"
+              >
                 Learn more
                 <span>
                   <i class="fas fa-arrow-right"></i>
@@ -289,11 +314,15 @@
               <div class="icon d-block fas fa-cloud-upload-alt"></div>
               <h3 class="display-3--title mt-1">Cloud Hosting</h3>
               <p class="lh-lg">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quas laudantium, reprehenderit libero animi, ipsam ratione cupiditate a autem iure non,
-                excepturi laboriosam vel id dolorum eum quod facilis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                laudantium, reprehenderit libero animi, ipsam ratione cupiditate
+                a autem iure non, excepturi laboriosam vel id dolorum eum quod
+                facilis.
               </p>
-              <button type="button" class="rounded-pill btn-rounded border-primary">
+              <button
+                type="button"
+                class="rounded-pill btn-rounded border-primary"
+              >
                 Learn more
                 <span>
                   <i class="fas fa-arrow-right"></i>
@@ -301,13 +330,188 @@
               </button>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
+          <div
+            class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end"
+          >
             <div class="services__pic">
-              <img src="images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
+              <img
+                src="images/services/service-3.png"
+                alt="cloud hosting illustration"
+                class="img-fluid"
+              />
             </div>
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- START THE TESTIMONIALS SECTION -->
+    <section id="testimonials" class="testimonials">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#fff"
+          fill-opacity="1"
+          d="M0,96L40,85.3C80,75,160,53,240,74.7C320,96,400,160,480,192C560,224,640,224,720,192C800,160,880,96,960,90.7C1040,85,1120,139,1200,160C1280,181,1360,171,1400,165.3L1440,160L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"
+        ></path>
+      </svg>
+      <div class="container">
+        <div class="row text-center text-white">
+          <h1 class="display-3 fw-bold">Testimonials</h1>
+          <hr style="width: 100px; height: 3px" class="mx-auto" />
+          <p class="lead pt-1">what our clients are saying</p>
+        </div>
+
+        <!-- START THE CAROUSELS SECTION -->
+        <div class="row align-items-center">
+          <div
+            id="carouselExampleCaptions"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <!-- CAROUSEL ITEM 1 -->
+              <div class="carousel-item active">
+                <!-- TESTIMONIALS CARD -->
+                <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fas fa-quote-left"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Enim blanditiis omnis atque sit sunt dolore minus commodi
+                    repudiandae aspernatur, cumque odit.
+                    <i class="fas fa-quote-right"></i>
+                    <div class="ratings p-1">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                    </div>
+                  </p>
+                </div>
+                <!-- CLIENT PICTURE -->
+                <div class="testimonials__picture">
+                  <img src="images/testimonials/client-1.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
+                </div>
+                <!-- CLIENT NAME & ROLE -->
+                <div class="testimonials__name">
+                  <h3>Patrick Muriungi</h3>
+                  <p class="fw-light">C.E.O & Founder</p>
+                </div>
+              </div>
+              <!-- CAROUSEL ITEM 2 -->
+              <div class="carousel-item">
+                <!-- TESTIMONIALS CARD -->
+                <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fas fa-quote-left"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Enim blanditiis omnis atque sit sunt dolore minus commodi
+                    repudiandae aspernatur, cumque odit.
+                    <i class="fas fa-quote-right"></i>
+                    <div class="ratings p-1">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                    </div>
+                  </p>
+                </div>
+                <!-- CLIENT PICTURE -->
+                <div class="testimonials__picture">
+                  <img src="images/testimonials/client-2.jpg" alt="client-2 picture" class="rounded-circle img-fluid">
+                </div>
+                <!-- CLIENT NAME & ROLE -->
+                <div class="testimonials__name">
+                  <h3>Joy Marete</h3>
+                  <p class="fw-light">Finance Manager</p>
+                </div>
+              </div>
+              <!-- CAROUSEL ITEM 3 -->
+              <div class="carousel-item">
+                <!-- TESTIMONIALS CARD -->
+                <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fas fa-quote-left"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Enim blanditiis omnis atque sit sunt dolore minus commodi
+                    repudiandae aspernatur, cumque odit.
+                    <i class="fas fa-quote-right"></i>
+                    <div class="ratings p-1">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                    </div>
+                  </p>
+                </div>
+                <!-- CLIENT PICTURE -->
+                <div class="testimonials__picture">
+                  <img src="images/testimonials/client-3.jpg" alt="client-3 picture" class="rounded-circle img-fluid">
+                </div>
+                <!-- CLIENT NAME & ROLE -->
+                <div class="testimonials__name">
+                  <h3>ClaireBelle Zawadi</h3>
+                  <p class="fw-light">Global Brand Manager</p>
+                </div>
+              </div>
+              <!-- CAROUSEL ITEM 4 -->
+              <div class="carousel-item">
+                <!-- TESTIMONIALS CARD -->
+                <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fas fa-quote-left"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Enim blanditiis omnis atque sit sunt dolore minus commodi
+                    repudiandae aspernatur, cumque odit.
+                    <i class="fas fa-quote-right"></i>
+                    <div class="ratings p-1">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                    </div>
+                  </p>
+                </div>
+                <!-- CLIENT PICTURE -->
+                <div class="testimonials__picture">
+                  <img src="images/testimonials/client-4.jpg" alt="client-4 picture" class="rounded-circle img-fluid">
+                </div>
+                <!-- CLIENT NAME & ROLE -->
+                <div class="testimonials__name">
+                  <h3>Uhuru Kenyatta</h3>
+                  <p class="fw-light">C.E.O & Founder</p>
+                </div>
+              </div>
+            </div>
+            <div class="text-center">
+              <button
+                class="btn btn-outline-light fas fa-long-arrow-alt-left"
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev"
+              >
+              </button>
+              <button
+                class="btn btn-outline-light fas fa-long-arrow-alt-right"
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next"
+              >
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#fff"
+          fill-opacity="1"
+          d="M0,96L40,85.3C80,75,160,53,240,74.7C320,96,400,160,480,192C560,224,640,224,720,192C800,160,880,96,960,90.7C1040,85,1120,139,1200,160C1280,181,1360,171,1400,165.3L1440,160L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
+        ></path>
+      </svg>
     </section>
 
     <script src="assets/vendors/js/glightbox.min.js"></script>
