--- a/index.html
+++ b/index.html
@@ -707,6 +707,62 @@
       </div>
     </section>
 
+    <!-- START THE GET STARTED SECTION -->
+    <section id="contact" class="get-started">
+      <div class="container">
+        <div class="row text-center">
+          <h1 class="display-3 fw-bold text-capitalize">Get Started</h1>
+          <div class="heading-line"></div>
+          <div class="lh-lg">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, repellendus fugit? Dolore?
+          </div>
+        </div>
+
+        <!-- START THE CTA CONTENT -->
+        <div class="row text-white">
+          <div class="col-12 col-lg-6 gradient shadow p-3">
+            <div class="cta-info w-100">
+              <h4 class="display-4 fw-bold">100% Satisfaction Guaranteed</h4>
+              <p class="lh-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat aliquid laboriosam velit officiis quae dolorum odit omnis esse, sit eum voluptatem.
+              </p>
+              <h3 class="display-3--brief">What will be the next step?</h3>
+              <ul class="cta-info__list">
+                <li>We'll prepare the proposal.</li>
+                <li>We'll discuss it together.</li>
+                <li>Let's start the discussion.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6 bg-white shadow p-3">
+            <div class="form w-100 pb-2">
+              <h4 class="display-3--title mb-5">start your project</h4>
+              <form action="#" class="row">
+                <div class="col-lg-6 col-md-6 mb-3">
+                  <input type="text" placeholder="First Name" id="inputFirstName" class="shadow form-control form-control-lg">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-3">
+                  <input type="text" placeholder="Last Name" id="inputLastName" class="shadow form-control form-control-lg">
+                </div>
+                <div class="col-lg-12 mb-3">
+                  <input type="email" placeholder="Email Address" id="inputEmail" class="shadow form-control form-control-lg">
+                </div>
+                <div class="col-lg-12 mb-3">
+                  <textarea name="message" placeholder="Message" id="message" rows="8" class="shadow form-control form-control-lg"></textarea>
+                </div>
+                <div class="text-center d-grid mt-1">
+                  <button type="button" class="btn btn-primary rounded-pill pt-3 pb-3">
+                    Submit
+                    <i class="fas fa-paper-plane"></i>
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     
 
     <script src="assets/vendors/js/glightbox.min.js"></script>
